# advent2022

./: pyproject.toml
day_1/: puzzle.ipynb
day_2/: puzzle.ipynb
day_3/: puzzle.ipynb
day_4/: puzzle.ipynb
day_5/: puzzle.ipynb
day_6/: puzzle.ipynb
day_7/: puzzle.ipynb
day_8/: puzzle.ipynb
day_8/.ipynb_checkpoints/: puzzle-checkpoint.ipynb
