[tool.poetry]
name = "advent2022"
version = "0.1.0"
description = ""
authors = ["Wesley <rademakerwesley@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
advent-of-code-data = "^2.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
